Fix/simplify `.note` spacing

--- a/styles/links.css
+++ b/styles/links.css
@@ -182,14 +182,10 @@ details[open] { --icon: '-' }
 
 	/* With additional text after (Markdown adds the `br`). */
 	&:has(> br) {
-		margin-block-end: calc(1rlh - 1cap);
+		margin-block-end: 1rcap;
 
-		/* Push the text back down to the baseline. */
-		> :where(a:has(> cite)) { margin-block-end: calc(0.343rlh + 1cap) }
-
-		/* TODO Not actually sure how this is derived! 🤷‍♀️ */
-
-		> br { display: none } /* Link is already `block`. */
+		/* Push the additional text back down to the (half) baseline. */
+		> :where(a:has(> cite)) { margin-block-end: calc(1cap - 2rcap) }
 	}
 }
 
